--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma": "dotenv -e .env.development -- npx prisma db push",
+    "studio": "dotenv -e .env.development -- npx prisma studio"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.6",
@@ -15,9 +17,9 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "dotenv-cli": "^7.2.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
-    "jose": "^4.14.4",
     "next": "13.4.2",
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
@@ -25,6 +27,9 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
+  },
+  "prisma": {
+    "schema": "prisma/schema.prisma"
   },
   "devDependencies": {
     "prisma": "^4.14.0"
