--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.0",
     "@react-spring/web": "^9.7.2",
+    "@tanstack/react-query": "^4.29.7",
+    "@tanstack/react-query-devtools": "^4.29.7",
     "@types/node": "20.1.4",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -36,6 +38,7 @@
     "schema": "prisma/schema.prisma"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^4.29.9",
     "prisma": "^4.14.0"
   }
 }
