--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "open-link",
   "version": "0.1.0",
   "private": true,
+  "description": "",
+  "author": "@danielcgilibert",
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "prisma": "dotenv -e .env.development -- npx prisma db push",
+    "prettier-check": "prettier --plugin-search-dir . --check . && eslint .",
+    "prettier-format": "prettier --plugin-search-dir . --write .",
+    "dbpush": "dotenv -e .env.development -- npx prisma db push",
     "studio": "dotenv -e .env.development -- npx prisma studio"
   },
   "dependencies": {
@@ -17,13 +21,9 @@
     "@react-spring/web": "^9.7.2",
     "@tanstack/react-query": "^4.29.7",
     "@tanstack/react-query-devtools": "^4.29.7",
-    "@types/node": "20.1.4",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "clsx": "^1.2.1",
     "dotenv-cli": "^7.2.1",
-    "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "next": "13.4.2",
     "next-auth": "^4.22.1",
@@ -31,6 +31,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "zustand": "^4.3.8"
@@ -40,6 +41,13 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.29.9",
+    "@types/node": "20.1.4",
+    "@types/react": "18.2.6",
+    "@types/react-dom": "18.2.4",
+    "eslint": "8.40.0",
+    "eslint-config-prettier": "^8.8.0",
+    "prettier": "2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "prisma": "^4.14.0"
   }
 }
