--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "eslint-config-next": "13.4.2",
     "next": "13.4.2",
     "next-auth": "^4.22.1",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-frame-component": "^5.2.6",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
