--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "@react-spring/web": "^9.7.2",
     "@tanstack/react-query": "^4.29.7",
     "@tanstack/react-query-devtools": "^4.29.7",
+    "@vanilla-extract/css": "^1.11.1",
+    "@vanilla-extract/next-plugin": "^2.1.3",
     "autoprefixer": "10.4.14",
     "clsx": "^1.2.1",
     "dotenv-cli": "^7.2.1",
     "eslint-config-next": "13.4.2",
     "next": "13.4.2",
     "next-auth": "^4.22.1",
-    "next-themes": "^0.2.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
