👷 chore(playwright.yml): add build step to build app before running tests to ensure tests are run on the latest code changes

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,6 +17,8 @@ jobs:
         run: npm install
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
+      - name: Build app
+        run: npm run build
       - name: Run Playwright tests
         run: npx playwright test
       - uses: actions/upload-artifact@v3
