🔥 chore(playwright.yml): remove Playwright GitHub Actions workflow ✨ feat(package.json): add vercel-build script to generate Prisma client and build Next.js app for Vercel deployment

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "vercel-build": "prisma generate && next build",
     "test": "pnpm exec playwright test",
     "start": "next start",
     "lint": "next lint",
